--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Abdul-malik-1234.github.io/movie-app",
+  "homepage": "https://Abdul-malik-1234.github.io/movie-app/",
   "name": "movie-app",
   "version": "0.1.0",
   "private": true,
